Fixed Story container with overflow auto

--- a/exercises/Isaac/sprite_animation/css/main.css
+++ b/exercises/Isaac/sprite_animation/css/main.css
@@ -4,13 +4,18 @@
     padding: 0;
     box-sizing: outline-box;
 }
+
+body {
+    width: 100%;
+    overflow: hidden;
+}
 /* End Normalization */
 
 /* Layers */
 .story {
     position: absolute;
     width: 4850px;
-    height: 680px;
+    height: 800px;
     left: 0px;
     background-color: #7EC0EE;
     animation-name: move;
@@ -19,7 +24,6 @@
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-delay: 0s;
-    animation-play-state: paused;
     animation-play-state: running;
     animation-direction: normal;
 }
@@ -45,7 +49,7 @@
     background-image: url("../images/walking.png");
     animation-name: walk, walk_up;
     animation-duration: 0.5s, 5s;
-    animation-timing-function: steps(1), linear;
+    animation-timing-function: steps(4), linear;
     animation-iteration-count: infinite, infinite;
     animation-play-state: running;
 }
@@ -102,8 +106,8 @@
 }
 
 .grass.bottom {
-    bottom: 0;
-    height: 100px;
+    top: 580px;
+    height: 190px;
 }
 /* End Grass */
 
@@ -134,22 +138,13 @@
     }
     100% {
         background-color: #7EC0EE;
-        left: -3550px;
+        left: -3450px;
     }
 }
 
 @keyframes walk {
-    0% {
-        background-position: 0px 0px;
-    }
-    25% {
-        background-position: -200px 0px;
-    }
-    50% {
-        background-position: -400px 0px;
-    }
-    75% {
-        background-position: -600px 0px;
+    100% {
+        background-position: -800px 0px;
     }
 }
 
